--- a/Task2/SRT/styles.css
+++ b/Task2/SRT/styles.css
@@ -1,6 +1,12 @@
+:root {
+
+  --main : 
+}
+
 body {
   font-family: Arial, sans-serif;
 }
+
 
 .container {
   width: 80%;
@@ -105,6 +111,10 @@ button {
  }
 
 
+
+
+
+
  input-container {
   position: relative;
 }
@@ -136,3 +146,64 @@ button {
 .input:focus {
   border: 2px solid var(--input-focus);
 }
+
+
+
+
+button.learn-more2 {
+  font-weight: 600;
+  color: #223038;
+  text-transform: uppercase;
+  padding: 1.25em 2em;
+  background: #f0f9ff;
+  border: 2px solid #85a4b1;
+  border-radius: 0.75em;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transition: background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+ }
+ 
+ button.learn-more2::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #c4f5f9;
+  border-radius: inherit;
+  -webkit-box-shadow: 0 0 0 2px #7fb8bc, 0 0.625em 0 0 #e2fff9;
+  box-shadow: 0 0 0 2px #8599b1, 0 0.625em 0 0 #e2faff;
+  -webkit-transform: translate3d(0, 0.75em, -1em);
+  transform: translate3d(0, 0.75em, -1em);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+ }
+ 
+ button.learn-more2:hover {
+  background: #e9fffe;
+  -webkit-transform: translate(0, 0.25em);
+  transform: translate(0, 0.25em);
+ }
+ 
+ button.learn-more2:hover::before {
+  -webkit-box-shadow: 0 0 0 2px #85a7b1, 0 0.5em 0 0 #183434;
+  box-shadow: 0 0 0 2px #8590b1, 0 0.5em 0 0 #e2f3ff;
+  -webkit-transform: translate3d(0, 0.5em, -1em);
+  transform: translate3d(0, 0.5em, -1em);
+ }
+ 
+ button.learn-more2:active {
+  background: #e9f3ff;
+  -webkit-transform: translate(0em, 0.75em);
+  transform: translate(0em, 0.75em);
+ }
+ 
+ button.learn-more2:active::before {
+  -webkit-box-shadow: 0 0 0 2px #83bfbc, 0 0 rgb(65, 114, 149);
+  box-shadow: 0 0 0 2px #74a1a7, 0 0 #e2f9ff;
+  -webkit-transform: translate3d(0, 0, -1em);
+  transform: translate3d(0, 0, -1em);
+ }
